--- a/Speaker_clock/app/src/main/res/layout/activity_main.xml
+++ b/Speaker_clock/app/src/main/res/layout/activity_main.xml
@@ -5,20 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.style.speaker_clock.MainActivity"
-    android:background="#000">
+    android:background="#000"
+    >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/digital7"
-        android:textSize="20dp"
+        android:textSize="30dp"
         android:layout_marginRight="7dp"
         android:textColor="#0099FF"
         android:id="@+id/AM_PM"
         android:layout_alignEnd="@id/second"
         android:layout_alignRight="@id/second"
-        android:layout_alignParentTop="true"
-        android:text="" />
+        android:layout_marginTop="10dp"
+        android:text=" " />
 
     <TextView
         android:layout_width="wrap_content"
@@ -97,7 +98,6 @@
         android:fontFamily="@font/segment7"
         android:textSize="60dp"
         android:textColor="#00CCFF"
-        android:paddingRight="3dp"
         android:layout_below="@id/AM_PM"
         android:text="  "
         android:layout_toRightOf="@id/noghte4"
@@ -198,7 +198,35 @@
         android:layout_below="@+id/tue"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="41dp"
-        android:text="show clock" />
+        android:text="show clock"
+        android:textSize="@d"/>
+    <RadioGroup
+        android:id="@+id/format_clock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button"
+        android:layout_marginLeft="142dp"
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/davazdah"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="12"
+            android:textColor="#FFF" />
+
+        <RadioButton
+            android:id="@+id/bistochar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="24"
+            android:textColor="#FFF" />
+
+    </RadioGroup>
+
 
 
 </RelativeLayout>
